# Seguranca-e-Auditoria-de-Sistemas

./: .gitignore  README.md
Analise_Frequencia/: Makefile  README.md  requirements.txt
Analise_Frequencia/database/: alemão.txt  ingles.txt  japones.txt  portugues.txt
Analise_Frequencia/src/: main.py  test.py  utils.py
Assinatura_Digital/: Makefile  assinaturaDigital.py
Assinatura_Digital/src/: assinaturaDigital.py  assinaturaDigitalExercicio.py
Autenticacao_Servidor/: README.md  requirements.txt
Autenticacao_Servidor/autenticao_servidor/: database.db  demo_mtls.sh  pyproject.toml  run_mtls.py  test_mtls.sh  test_mtls_client.py
Autenticacao_Servidor/autenticao_servidor/autenticao_servidor/routes/: user.py
Autenticacao_Servidor/autenticao_servidor/autenticao_servidor/src/: database.py  main.py  models.py  schemas.py  settings.py
Autenticacao_Servidor/autenticao_servidor/certs/: ca-certificados.txt  sv-certificados.txt  user-certificados.text
Autenticacao_Servidor/autenticao_servidor/migrations/: env.py
Autenticacao_Servidor/autenticao_servidor/migrations/versions/: 84a9e9ce8bfd_create_users_table.py
Autenticacao_Servidor/autenticao_servidor/src/: database.py  main.py  models.py  mtls_middleware.py  schemas.py  security.py  settings.py
Autenticacao_Servidor/autenticao_servidor/src/routers/: auth.py  user.py
Certificado_Digital/: README.md  pyproject.toml  requirements.txt
Certificado_Digital/src/: certificado_pessoal.py  certificado_raiz.py  cliente.py  servidor.py
Certificado_Digital/tests/: test_certificado_digital.py
Criptografia/: MinhaCriptoGUI.java  MinhaCriptoPy.py  XORaBit.cpp  bitabit.cpp  bitwise.cpp  bitwiseAdicao.cpp  teste.cpp  teste2.cpp
Criptografia_Assimetrica/: Makefile
Criptografia_Assimetrica/src/: criptografiaAssimetrica.py  envelopeDigital.py
Criptografia_Simetrica/: Makefile  README.md
Criptografia_Simetrica/src/: criptografiaSimetrica  criptografiaSimetrica.py
Gerador_Metadados_Verificacao/: README.md
Gerador_Metadados_Verificacao/src/: GeradorMetadados.py
Hmac/: hmacEstacao.py
