[project]
name = "autenticao-servidor"
version = "0.1.0"
description = ""
authors = [
    {name = "João Vitor Campõe Galescky",email = "126702799+Joaogalescky@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.124.4,<0.125.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.14.9,<0.15.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "tzdata (>=2025.3,<2026.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
